--- a/GIT.html
+++ b/GIT.html
@@ -4,5 +4,7 @@
         <title>My new webpage</title>
     </head>
     <body>
+        <h1>Heading</h1>
+        <p>paragraph</p>
     </body>
 </html>
