--- a/GIT.html
+++ b/GIT.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Heading</h1>
         <p>paragraph</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHG5O1yoMYQFEViVDDSTtsUpOPwkTEBaxEKQ&usqp=CAU">
     </body>
 </html>
